<resources>
	<string name="app_name">M.C.T</string>
	<string name="activity_name">My Contraception Timer</string>
	<string name="menu_settings">Settings</string>
	<string name="text_stepOneTitle_contraception">Contraception</string>
	<string name="text_stepTwoTitle_alarm">Alarm</string>
	<string name="toggleButton_pill">Pill</string>
	<string name="toggleButton_patch">Patch</string>
	<string name="toggleButton_ring">Ring</string>
	<string name="cancelDialog_title">Cancel contraception timer?</string>
	<string name="cancelDialog_content">This action will stop your timer! </string>
	<string name="cancelDialog_yes">Yes, please </string>
	<string name="cancelDialog_no">No, thanks </string>
	<string name="startDialog_title">Set first use of your cycle</string>
	<string name="startDialog_content">Choose a specific date or start today a new cycle. </string>
	<string name="startDialog_now">Start today </string>
	<string name="startDialog_specificDate">Start specific </string>
	<!-- HomeScreen -->
	<string name="imageview_logo_contentdescription">MyContraception Logo</string>
	<string name="text_introduction">Just 3 easy steps to setup everything you need.</string>
	<string name="text_setupStep_1">1. Choose your contraception type.</string>
	<string name="text_setupStep_2">2. Choose your alarm time.</string>
	<string name="text_setupStep_3">3. Start your cycle.</string>
	<string name="text_readyToStart">Ready to start? Click!!</string>
	<!-- AlarmScreen -->
	<string name="text_updateAlarmTime">Update just alarm time</string>
	<string name="text_start">Start</string>
	<string name="text_stop">Stop</string>
	<!-- Message -->
	<string name="_1">1st</string>
	<string name="_2">2nd</string>
	<string name="_3">3rd</string>
	<string name="_4">4th</string>
	<string name="_5">5th</string>
	<string name="_6">6th</string>
	<string name="_7">7th</string>
	<string name="_8">8th</string>
	<string name="_9">9th</string>
	<string name="_10">10th</string>
	<string name="_11">11th</string>
	<string name="_12">12th</string>
	<string name="_13">13th</string>
	<string name="_14">14th</string>
	<string name="_15">15th</string>
	<string name="_16">16th</string>
	<string name="_17">17th</string>
	<string name="_18">18th</string>
	<string name="_19">19th</string>
	<string name="_20">20th</string>
	<string name="_21">21st</string>
</resources>